--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [tool.poetry]
 name = "vembrane"
 version = "0.1.0"
-description = "Filter VCF/BCF files with simple Python expressions."
-authors = ["Till Hartmann"]
+description = "Execute VCF tools in parallel."
+authors = ["Christopher Schröder"]
 
 [tool.poetry.scripts]
-vembrane = 'vembrane:main'
+vapor = 'vapor:main"
 
 [tool.poetry.dependencies]
 python = "^3.7"
@@ -13,7 +13,6 @@ pysam = "^0.16"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
-pyyaml = "^5.3"
 pre-commit = "^1.10"
 black = { version = "^19.10b0", python = "^3.7" }
 
